CGIV-7481 Fixed product row sizing on firefox

--- a/public/channelgrabber/products/scss/_products.scss
+++ b/public/channelgrabber/products/scss/_products.scss
@@ -95,6 +95,7 @@
     }
     .product-info-container {
         height: 100%;
+        width: 100%;
         float: left;
         .product-header {
             width: 100%;
